Improvements to max melodic repeating factor